@@ -188,6 +188,8 @@
 	Fixed "Querying... (??%)" message on :compare having an extra space in
 	parenthesis.
 
+	Fixed potential integer overflows on sorting.
+
 0.13-beta to 0.13 (2023-04-04)
 
 	Made "withicase" and "withrcase" affect how files are sorted before
